syntax = "proto3";

package shard.v1;

option go_package = "pkg.world.dev/world-engine/chain/x/shard/types";


message Transaction {
  // tx_id is the ID associated with the payloads below. This is needed so we know which transaction struct
  // to unmarshal the payload.Body into.
  uint64 tx_id = 1;

  // game_shard_transaction is an encoded game shard transaction.
  bytes game_shard_transaction = 2;
}

// Epoch contains an epoch number, and the transactions that occurred in that epoch.
message Epoch {
  uint64 epoch = 1;
  uint64 unix_timestamp = 2;
  repeated Transaction txs = 3;
}